Fixed BUG#6900: Stored procedure inner handler ignored   and BUG#9074: STORED PROC: The scope of every handler declared is not properly applied